--- a/prometheus/config/prometheus.yml
+++ b/prometheus/config/prometheus.yml
@@ -28,6 +28,12 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
   
+  - job_name: "node"
+    scrape_interval: 10s
+    metrics_path: "/metrics"
+    static_configs:
+      - targets: ["172.16.0.112:9100"]
+  
   - job_name: 'redis_exporter'
     file_sd_configs:
     - refresh_interval: 1m
